switched indexing to not reverse play order. fixed last delete play not showing up

--- a/app/indexing/styles.less
+++ b/app/indexing/styles.less
@@ -137,7 +137,7 @@
         flex: 0 0 420px;
         border-left: 1px solid rgb(216, 216, 216);
         overflow: visible;
-        height: 100%;
+        height: ~"calc(100% - 0px)";
 
         &.ui-hide {
 
@@ -146,7 +146,7 @@
 
         .plays {
             overflow: scroll;
-            height: 100%;
+            height: ~"calc(100% - 32px)";
         }
 
         .note-choice {
